style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display:wght@500&display=swap');

html {
    scroll-behavior: smooth;
}

body {

    font-family: 'Playfair Display', serif;
    margin: 0;
    padding: 0;
    background-color: antiquewhite;
    overflow-x: hidden;
}


/* Header */

header {
    background-color: #efd688b1;

    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    width: 100%;
    height: 10%;
    z-index: 1;
    border-radius: 0 0 10% 10%;
  
}

.wave-effect {
    position: fixed;
    overflow: hidden;

}

  .wave-effect::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 20px;
    background-color: transparent;
    transform: translateY(100%);
    
  }
  
  .wave-effect::before {
    content: "";
    position: absolute;
    bottom: -10px;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #2B65EC;
    opacity: 0.2;
    animation: wave 4s infinite linear;
  }
  
  @keyframes wave {
    0% {
      transform: translateY(100%);
    }
    50% {
      transform: translateY(0);
    }
    100% {
      transform: translateY(100%);
    }
  }
  .fish {
    position: absolute;
    width: 70px;
    height: 50px;
    z-index: -1;
    animation: fishSwim 10s linear infinite;
    animation-delay: -5s; /* Pidä kalat animaation ulkopuolella ensimmäiset 5 sekuntia */
  }
  
  .fish:nth-child(2) {
    left: calc(50% + 100px); /* Toinen kala aloittaa 50% headerin leveydestä + 100px väli */
    animation-delay: -1s; /* Toinen kala aloittaa 1 sekunnin viiveellä */
  }
  
  .fish:nth-child(3) {
    left: calc(100% + 200px); /* Kolmas kala aloittaa 100% headerin leveydestä + 200px väli */
    animation-delay: -3s; /* Kolmas kala aloittaa 3 sekunnin viiveellä */
  }
  
  @keyframes fishSwim {
    0% {
      left: -100%; /* Kalat alkavat ulkopuolelta näytön vasemmalta puolelta */
    }
    100% {
      left: 100%; /* Kalat kulkevat näytön oikean reunan ohi */
    }
  }
  
  


  



nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 90%;
    margin: auto;
    padding: 20px 0;
}



.logo a {
    font-size: 1.5rem;
    color: rgb(0, 0, 0);
    text-decoration: none;
}

.nav-links {
    display: flex;
    justify-content: space-around;
    width: 50%;
}

.nav-links li {
    list-style: none;
}

.nav-links a {
    color: rgb(0, 0, 0);
    font-size: 1.1rem;
    text-decoration: none;
    letter-spacing: 1px;
    font-weight: bold;
}



/* Introduction */

.intro {
    background-image: url('pic/img1.jpg');
    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), linear-gradient(rgba(255, 165, 0, 0.1), rgba(255, 165, 0, 0.2)), url('pic/img1.jpg');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    
}

.intro h1 {
    color: white;
    font-size: 3.5rem;
    text-align: center;
}

.intro p {
    color: white;
    font-size: 1.5rem;
    text-align: center;
    margin-right: 100px;
    margin-left: 100px;
    font-family: 'Oswald', sans-serif;
    background-color: #3333337e;
    border-radius: 20px;
    padding: 15px;
}


/* Coding languages */
.coding-languages-wrapper {
  width: 100%;
  display: flex;
  flex-wrap: wrap; /* Lisätty rivitys */
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.coding-language {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
  width: 100px;
  height: 150px;
  margin: 10px;
}

.coding-language img {
  width: 100%;
}
/* .coding-language h3 {
  font-size: 1.5rem;
  margin-bottom: 10px;
  color: white;
  text-align: center;
} */


.sticky-container {
    position: fixed;
    bottom: 20px; /* Voit säätää tarvittavaa sijaintia */
    right: 20px; /* Voit säätää tarvittavaa sijaintia */
    background-color: #ff0000;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
    transition: transform 0.3s ease-in-out;
    z-index: 2;
  }
  
  .sticky-container:hover {
    transform: translateY(-5px);
  }
  
  .sticky-container a {
    text-decoration: none;
    color: #ffffff;
  }
  
  .sticky-container a:hover {
    text-decoration: underline;
  }
  
/*Projects*/

.carousel {
    display: flex;
    overflow-x: scroll;
    margin-bottom: 50px;
    padding: 40px;
    width: calc(100% - 80px);
    scroll-behavior: smooth;
    margin-bottom: -1px;
}

.project, .project3, .project4 {
    flex: 0 0 auto;
    flex-basis: calc((100% - 90px) / 3);
    /* kolme elementtiä */
    width: calc((100% - 60px) / 3);
    /* kolme elementtiä */
    height: 300px;
    margin: 0 20px;
    border-radius: 20px;
    overflow: hidden;
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
    transition: transform 0.3s ease-in-out; 
    position: relative;
    cursor: pointer;
}


.project:hover .taso {
    visibility: visible;
    opacity: 1;
  }


.project:hover, .project3:hover, .project4:hover {
    transform: translateY(-10px);
    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
}

.project img,
.project3 img, .project4 img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: all 0.3s ease-in-out;
}



.project2 {
  flex: 0 0 auto;
  flex-basis: calc((100% - 90px) / 3);
  width: calc((100% - 60px) / 3);
  height: 300px;
  margin: 0 20px;
  border-radius: 20px;
  overflow: hidden;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
  transition: transform 0.3s ease-in-out;
  position: relative;
  cursor: pointer;
}

.project2 .video-container {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.project2 .thumbnail {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

.project2 video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: none;
  cursor: pointer;
}

.project2.show-video video {
  display: block;
}

.project2:hover .overlay,
.project3:hover .overlay,
.project4:hover .overlay {
  opacity: 1;
}

.project2 .overlay,
.project3 .overlay,
.project4 .overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
}

.project2 .overlay p,
.project3 .overlay p,
.project4 .overlay p {
  color: #fff;
  font-size: 18px;
}


  .project2:hover {
    transform: translateY(-10px);
    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
}

.project4 .overlay {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  .project4 .overlay p {
    text-align: center;
  }
  
  .project4 .overlay a {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  .project4 .overlay a img {
    width: 70px;
    height: 70px;
    margin-top: 10px;
    border-radius: 50%;
  }
  



.taso {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    color: #fff;
    padding: 10px;
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s, opacity 0.5s ease;
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

.taso h3{
font-weight: 500;
margin-bottom: 20px;;
}

.taso p{
        text-align: center;
     display: flex;
        justify-content: center;
        align-items: center;  
}

.taso a{

color: #fff;
text-decoration: none;
font-size: 18px;
line-height: 60px;
width: 60px;
height: 60px;
border-radius: 10%;
text-align: center;
}

.taso i{
    font-size: 40px;
}

.projects h2 {
    padding: 50px;
    text-align: center;
    font-size: 40px;
}

.controls {
    display: flex;
    justify-content: center;
    align-items: center;
}

.controls button {
    font-size: 25px;
    padding: 10px 20px;
    margin: 0 10px;
    border: none;
    border-radius: 15px;
    background-color: #49e921;
    color: #fff;
    cursor: pointer;
    transition: all 0.2s ease-in-out;
}

.controls button:hover {
    background-color: rgb(255, 144, 53);
}

.controls button:active {
    transform: scale(0.95);
}


/*.carousel::-webkit-scrollbar {
    width: 0.5rem;
}

.carousel::-webkit-scrollbar-track {
    background-color: #f1f1f1;
}

.carousel::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 1rem;
}
*/


/*Contact*/

.contact {
    text-align: center;
    margin-top: 200px;
}

.contact h2 {
    font-size: 2.4rem;
}

.contact-container {
    margin: 50px auto;
    max-width: 400px;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
    background-color: #f9f9f9;
    margin-bottom: 150px;
    animation-name: float;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

@keyframes float {
    0% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-10px);
    }
    100% {
      transform: translateY(0);
    }
  }

.contact-container h3 {
    font-size: 1.2rem;
    margin-top: 0;
}

.contact-container p {
    font-size: 1rem;
}

.contact-container a {
    color: #333;
    size: 20px;
    text-decoration: NONE;
}

.contact-container i {
    font-size: 40px;
    margin-right: 20px;
    color: orange;
}

.contact-container i:hover {
    color: orangered
}


/* Footer */

footer {
    background-color: rgb(255, 144, 53);
    color: white;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    padding: 30px 0;
}

.footer-logo {
    font-size: 2rem;
    margin-bottom: 20px;
}

.footer-links {
    display: flex;
    justify-content: space-around;
    width: 50%;
}

.footer-links li {
    list-style: none;
}

.footer-links a {
    color: black;
    font-size: 1.1rem;
    text-decoration: none;
    letter-spacing: 1px;
}

.footer-links a:hover {
    color: rgb(18, 255, 101);
}

.credits p{
    color: black;
}

.scroll-to-top {
    position: absolute;
    left: 92%;
    margin-bottom: 260px;
    font-size: 60px;
}

.scroll-to-top a {
    color: rgb(98, 225, 43);
}

@media screen and (max-width: 768px) {


    .nav-links {
        display: none;
    }

    .intro h1 {
        font-size: 20px;
    }
    .intro p {
        font-size: 14px;
        margin: 9px ;
    }

    /* Tämä on puhelinversio */

      .coding-languages-wrapper {
        padding: 10px; /* Pienennetty padding */
      }
      .coding-language {
        width: 60px; /* Pienennetty leveys */
        height: 50px; /* Pienennetty korkeus */
        padding: 7px;
        margin: 10px;
      }
      .coding-language img {
        width: 100%;
      }

    /* .coding-language h3 {
        font-size: 0.8rem;
        margin-bottom: 0px;
    } */

    .carousel {
        padding: 40px 20px;
        width: calc(100% - 35px);
        backface-visibility: hidden;
        box-sizing: border-box;
    }

    .project,
    .project2,
    .project3,
    .project4 {
    flex-basis: calc(100% / 1);
    margin: 0 15px;
    max-width: 100%;
}


    .projects h2 {
        padding: 10px;
    }

    .contact-container {
        max-width: 300px;
        border-radius: 30px;
    }

    .contact {
        margin-top: 100px;
    }

    .footer-links a {
        font-size: 0.8rem;
        text-decoration: none;
        letter-spacing: 1px;
    }

    .scroll-to-top {
        left: 80%;
    }

}

